--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,15 @@ section {
 .text-right {
     text-align: right;
 }
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
