--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,14 @@ section {
 .text-right {
     text-align: right;
 }
+/* REACH OUT STYLES START */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+.contact h2 {
+    color: #fce138;
+}
 .contact-info iframe {
     width: 400px;
     height: 400px;
@@ -226,3 +234,18 @@ section {
     margin: 30px 0 0 60px;
     color: white;
 }
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+    
+}
+.contact-info a {
+    color: #fce138
+}
+/* REACH OUT STYLES END */
