--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,12 @@ section {
     background-position: center;
     position: relative;
 }
+/* these two colors will override the ones above in .hero */
+.hero-secondary {
+    background-color: black;
+    color: red;
+
+}
 /*Hero Style End*/
 .hero-form {
     border: 3px solid #024e76;
