--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,15 +53,18 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2 {
-    display: inline;
+    /* display: inline; */
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div {
-    float: right;
+    /* float: right; */
     line-height: 1.5;
     text-align: right;
 }
@@ -75,10 +78,13 @@ section {
 /* hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
+    /* height: 600px; */
     background-size: cover;
     background-position: center;
-    position: relative;
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 /* these two colors will override the ones above in .hero */
 .hero-secondary {
@@ -91,11 +97,13 @@ section {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
+    /* width: 500px; */
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    /* position: absolute;
+    bottom: 120px; */
+    /* right: 140px; */
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -122,6 +130,19 @@ section {
     border: none;
     padding: none;
     font-size: 16px;
+}
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 /* HERO STYLES END */
 .intro {
