--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,9 @@ section {
     color: #fce138;
 }
 /* HERO STYLES END */
-.intro {
+/* .intro {
     text-align: center;
-}
+} */
 /*.intro h2 {
     font-size: 55px;
     color: #024e76;
@@ -163,9 +163,10 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
+    /* text-align: center; */
     background: #fce138;
 }
 /*.steps h2 {
@@ -201,10 +202,14 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
+    /* margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    display: inline-block;
+    display: inline-block; */
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -212,9 +217,9 @@ section {
 .secondary-border {
     border-color: #39a6b2;
 }
-.trainers {
+/* .trainers {
     text-align: center;
-}
+} */
 .trainer {
     
     width: 900px;
@@ -252,9 +257,12 @@ section {
 .text-right {
     text-align: right;
 }
+.flex-row {
+    display: flex;
+}
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
+    /* text-align: center; */
     background: #024e76;
 }
 .contact h2 {
@@ -287,3 +295,6 @@ section {
     color: #fce138
 }
 /* REACH OUT STYLES END */
+.flex-row {
+    display: flex;
+}
