--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,19 @@ section {
     justify-content: center;
     flex-wrap: wrap;
 }
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 /* these two colors will override the ones above in .hero */
 .hero-secondary {
     background-color: black;
@@ -131,19 +144,7 @@ section {
     padding: none;
     font-size: 16px;
 }
-.hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.3;
-}
-.hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-}
+
 /* HERO STYLES END */
 /* .intro {
     text-align: center;
@@ -169,6 +170,16 @@ section {
     /* text-align: center; */
     background: #fce138;
 }
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80px;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
 /*.steps h2 {
     font-size: 55px;
     color: #024e76;
@@ -178,27 +189,32 @@ section {
     border-color: #39a6b2;
 }*/
 
-
+/* 
 .steps div {
     margin-bottom: 80px;
 }
 .steps img {
     width: 15%;
     margin: 10px 0;
-}
-.steps h3 {
+} */
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
-.steps p {
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
+}
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
 }
 
-.steps span {
+/* .steps span {
     font-size: 38px;
-}
+} */
 .section-title {
     font-size: 55px;
     color: #024e76;
