--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ section {
 .hero-cta {
     width: 35%;
     text-align: right;
-    margin: 3.5;
+    margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.3;
@@ -173,13 +173,42 @@ section {
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
-    width: 80px;
+    width: 80%;
     border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
+.step h3 {
+    color: #024e76;
+    font-size: 46px;
+    /* margin-top: 10px; */
+    flex: 1 30%;
+}
+.step-info {
+    flex: 2.70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+}
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-img img {
+    max-width: 100%;
+}
+.step-text {
+    flex: 12;
+}
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+
 /*.steps h2 {
     font-size: 55px;
     color: #024e76;
@@ -197,19 +226,10 @@ section {
     width: 15%;
     margin: 10px 0;
 } */
-.step h3 {
-    color: #024e76;
-    font-size: 46px;
-    /* margin-top: 10px; */
-}
+
 .step-text p {
     color: #39a6b2;
     font-size: 18px;
-}
-.step-text h4 {
-    font-size: 26px;
-    line-height: 1.5;
-    color: #024e76;
 }
 
 /* .steps span {
