--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -85,6 +85,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-cta {
     width: 35%;
@@ -92,7 +93,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -236,7 +237,7 @@ section {
     font-size: 38px;
 } */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     /* margin-bottom: 35px;
     padding: 0 100px 20px 100px;
@@ -368,4 +369,16 @@ section {
 /* REACH OUT STYLES END */
 .flex-row {
     display: flex;
+}
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREEN AND SMALLER */
+@media screen and (max-width: 980px) {
+
+}
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+
+}
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+
 }
