--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg"); 
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
@@ -17,6 +25,8 @@ header h1 {
     color: #fce138;
     margin: 0;
     /* display: inline; */
+    /* add alongside our existing declaration */
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
     text-decoration: none;
@@ -41,6 +51,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 body {
     /*more on this crazy alphanumerical value in a minute! */
@@ -94,6 +111,7 @@ section {
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-cta h2 {
     font-style: italic;
@@ -109,7 +127,8 @@ section {
 /*Hero Style End*/
 .hero-form {
     border: 3px solid #024e76;
-    background-color: #fce138;
+    border-radius: 15px;
+    background-color: rgba(252,225,56,0.8);
     padding: 20px;
     /* width: 500px; */
     color: #024e76;
@@ -118,6 +137,7 @@ section {
     /* right: 140px; */
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-form h3 {
     font-size: 24px;
@@ -125,6 +145,9 @@ section {
 }
 .hero-form p{
     margin: 5px 0 15px 0;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 .form-input {
     border: 1px solid #024e76;
@@ -134,6 +157,12 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+.form-input:focus {
+    background-color: rgba(252,225,255,1);
+    outline: none;
 }
 .hero-form label {
     margin: 0 5px;
@@ -144,6 +173,7 @@ section {
     border: none;
     padding: none;
     font-size: 16px;
+    border-radius: 15px;
 }
 
 /* HERO STYLES END */
@@ -180,6 +210,12 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+/* .step:nth-child(even){
+    border-bottom: 1px solid #39a6b2;
+} */
+.step:last-child  {
+    border-bottom: none;
 }
 .step h3 {
     color: #024e76;
@@ -346,6 +382,7 @@ section {
 }
 .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
+    border-radius: 15px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -353,15 +390,25 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 .contact-form button {
     width: 100%;
     border: none;
+    border-radius: 15px;
     background: #fce138;
     color: #024e76;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 .contact-info a {
     color: #fce138;
@@ -375,6 +422,7 @@ section {
   header {
       padding-bottom: 0;
       justify-content: center;
+      position: relative;
   }
   header h1 {
       width: 100%;
