--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+
+}
 * {
     margin:0;
     padding: 0;
@@ -6,7 +12,7 @@
 /* apply styles to <header>*/
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -18,11 +24,12 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     /* display: inline; */
     /* add alongside our existing declaration */
@@ -30,7 +37,7 @@ header h1 {
 }
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 header nav {
     /* float: right; */
@@ -54,20 +61,72 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+  }
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+  }
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid var(--secondary-color);  
+    position: absolute;
+    top: -4px;
+    left: -30px;
+  }
+  .radio-wrapper label::before{
+      border-radius: 50%;
+  }
+  .radio-wrapper label::after {
+      content: "";
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: var(--secondary-color);
+      position: absolute;
+      left: -29px;
+      top: -3px;
+      background-image: radial-gradient(circle, #39a6b2, var(--secondary-color));
+  }
+  .checkbox-wrapper label::after {
+      content: "";
+      height: 6px;
+      width: 14px;
+      border-left: 2px solid var(--secondary-color);
+      border-bottom: 2px sold var(--secondary-color);
+      position: absolute;
+      left: -26px;
+      top: 1px;
+      transform: rotate(-58deg);
+  }
+.checkbox-wrapper input + label::after,
+.radio-wrapper input+label::after {
+    content: none;
+}
+.checkbox-wrapper input:checked+label::after,
+.radio-wrappper input:checked+label::after {
+    content: "";
+}
 body {
     /*more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, san-serif;
    
 }
 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -76,7 +135,7 @@ footer {
 }
 footer h2 {
     /* display: inline; */
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -86,7 +145,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding: 60px;
@@ -116,7 +175,7 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
 }
 /* these two colors will override the ones above in .hero */
 .hero-secondary {
@@ -126,12 +185,12 @@ section {
 }
 /*Hero Style End*/
 .hero-form {
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
     border-radius: 15px;
     background-color: rgba(252,225,56,0.8);
     padding: 20px;
     /* width: 500px; */
-    color: #024e76;
+    color: var(--secondary-color);
     /* position: absolute;
     bottom: 120px; */
     /* right: 140px; */
@@ -147,14 +206,14 @@ section {
     margin: 5px 0 15px 0;
 }
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 15px;
@@ -168,8 +227,8 @@ section {
     margin: 0 5px;
 }
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: none;
     font-size: 16px;
@@ -191,7 +250,7 @@ section {
 }*/
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -199,13 +258,13 @@ section {
 }
 .steps {
     /* text-align: center; */
-    background: #fce138;
+    background: var(--primary-color);
 }
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--tertiary-color);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -218,7 +277,7 @@ section {
     border-bottom: none;
 }
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     /* margin-top: 10px; */
     flex: 1 30%;
@@ -243,7 +302,7 @@ section {
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 /*.steps h2 {
@@ -265,7 +324,7 @@ section {
 } */
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 
@@ -274,7 +333,7 @@ section {
 } */
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     /* margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     display: inline-block; */
@@ -285,10 +344,10 @@ section {
     width: 50%;
 }
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 .trainers {
     width: 100%;
@@ -302,8 +361,8 @@ section {
     
     /* width: 900px; */
     margin: 0 auto 20px auto;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     /* overflow:auto; */
     flex: 1;
 }
@@ -343,7 +402,7 @@ section {
 /* REACH OUT STYLES START */
 .contact {
     /* text-align: center; */
-    background: #024e76;
+    background: var(--secondary-color);
 }
 .contact-info {
     display: flex;
@@ -355,7 +414,7 @@ section {
     margin: 15px;
 }
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-info iframe {
     /* width: 400px; */
@@ -370,7 +429,7 @@ section {
     color: white;
 }
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 .contact-info p, .contact-info address {
@@ -381,12 +440,12 @@ section {
     
 }
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     border-radius: 15px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -400,18 +459,18 @@ section {
     width: 100%;
     border: none;
     border-radius: 15px;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
 }
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 /* REACH OUT STYLES END */
 .flex-row {
